added user login signin - firebase

--- a/frontend/src/Styles/Login.css
+++ b/frontend/src/Styles/Login.css
@@ -85,6 +85,12 @@
   text-decoration: underline;
 }
 
+.or-divider {
+    text-align: center;
+    margin: 16px 0;
+    color: #888;
+}
+
 /* For mobile responsiveness */
 @media screen and (max-width: 768px) {
   .auth-form {
